<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="app_name" translatable="false">Pallax</string>
  <string name="app_developer" translatable="false">Patrick Zedler</string>
  <string name="app_mail" translatable="false">mail@patrickzedler.com</string>
  <string name="app_website" translatable="false">https://patrickzedler.com</string>
  <string name="app_vending" translatable="false">http://play.google.com/store/apps/dev?id=8122479227040208191</string>
  <string name="app_github" translatable="false">https://github.com/patzly/pallax-android/</string>
  <string name="app_translate" translatable="false">https://www.transifex.com/patzly/pallax-android/</string>
  <string name="app_privacy" translatable="false">https://patrickzedler.com/pallax/privacy-policy-pallax/</string>
  <string name="wallpaper_description">Convert your current static background into a live wallpaper with auto dark mode and power-efficient animations.</string>
  <string name="wallpaper_description_picker">Explore a colorful collection of shapes, refined with gentle parallax and zoom effects when you swipe through your home screens and unlock your device.\nCustomize the wallpaper to match your preferences!</string>
  <string name="title_permission_request">Permission required</string>
  <string name="title_info">Information</string>
  <string name="title_apply_changes">Apply changes</string>
  <string name="title_feedback">Feedback</string>
  <string name="title_licenses">Open source licenses</string>
  <string name="label_ms">%1$sms</string>
  <string name="label_light">light</string>
  <string name="label_dark">dark</string>
  <string name="action_keep">Keep</string>
  <string name="action_replace">Replace</string>
  <string name="action_howto">How it works</string>
  <string name="action_close">Close</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_grant">Grant access</string>
  <string name="action_back">Back</string>
  <string name="action_open_link">Open external website</string>
  <string name="action_hide">Hide</string>
  <string name="action_reset">Reset</string>
  <string name="action_retry">Retry</string>
  <string name="action_deactivate">Deactivate</string>
  <string name="action_select_all">Select all</string>
  <string name="action_continue">Continue</string>
  <string name="action_open_app_info">Open app info</string>
  <string name="action_set">Parallaxify</string>
  <string name="action_learn_more">Learn more</string>
  <string name="action_help">Help</string>
  <string name="action_send_feedback">Send feedback</string>
  <string name="action_share">Share</string>
  <string name="action_share_description">Tell your friends about Pallax</string>
  <string name="action_email">Send email</string>
  <string name="action_email_description">Contact the developer</string>
  <string name="action_rate">Rate on Google Play</string>
  <string name="action_rate_description">Support the development</string>
  <string name="action_github">Pallax Android on GitHub</string>
  <string name="action_github_description">Open a new issue</string>
  <string name="action_language_select">Select language</string>
  <string name="appearance_title">Appearance</string>
  <string name="appearance_description">Position &amp; color options</string>
  <string name="appearance_info">Switch dark mode on and off to change unlinked settings for two wallpapers separately.</string>
  <string name="appearance_position_category">Position &amp; size</string>
  <string name="appearance_scale">Scale</string>
  <string name="appearance_scale_description">Useful for big screens and densities</string>
  <string name="appearance_static_offset">Horizontal offset correction</string>
  <string name="appearance_static_offset_description">Increase to move wallpaper to the right</string>
  <string name="appearance_colors_category">Colors</string>
  <string name="appearance_dark_mode">Dark mode</string>
  <string name="appearance_dark_mode_description">Switch between the two wallpapers</string>
  <string name="appearance_dark_mode_auto">Auto</string>
  <string name="appearance_dark_mode_on">On</string>
  <string name="appearance_dark_mode_off">Off</string>
  <string name="appearance_dimming">Dimming</string>
  <string name="appearance_dimming_description">May improve readability</string>
  <string name="appearance_dark_text">Dark text</string>
  <string name="appearance_dark_text_description">May affect readability</string>
  <string name="appearance_white_text">Force white text</string>
  <string name="appearance_dark_launcher">Dark launcher elements</string>
  <string name="appearance_dark_launcher_description">May not supported by every device</string>
  <string name="appearance_colors_info">On devices without dynamic color support (Android 11 or lower), only the primary color is used to calculate the launcher text contrast and tinting the recent apps screen\'s background.</string>
  <string name="appearance_colors_info_dynamic">On devices with Android 12 or higher and dynamic color support, the three selected colors are used to automatically create a system-wide color theme.</string>
  <string name="parallax_title">Parallax</string>
  <string name="parallax_description">Swipe &amp; tilt effect</string>
  <string name="parallax_touch_wiz">It seems that your current launcher is Samsung TouchWiz, which does not support background scrolling. Please try a different launcher to enable the parallax effect if you don\'t have the tilt sensor option enabled.\nYou can ignore this warning if you set another launcher as default.</string>
  <string name="parallax_intensity">Parallax strength</string>
  <string name="parallax_intensity_description">Horizontal offset on page swipe and tilt effect intensity</string>
  <string name="parallax_none">None</string>
  <string name="parallax_swipe_power_save">Respect battery saver</string>
  <string name="parallax_swipe_power_save_description">Pause page swipe animation when battery saver is enabled</string>
  <string name="parallax_category_tilt">Tilt effect</string>
  <string name="parallax_tilt">Move when tilting the device</string>
  <string name="parallax_tilt_description">Consumes more battery</string>
  <string name="parallax_refresh_rate">Tilt sensor refresh rate</string>
  <string name="parallax_refresh_rate_description">Too short delays can make zoom animations laggy</string>
  <string name="parallax_damping">Motion damping</string>
  <string name="parallax_damping_description">Decrease for more smoothness</string>
  <string name="parallax_threshold">Movement threshold</string>
  <string name="parallax_threshold_description">Increase to pause continuous rendering despite little movement</string>
  <string name="parallax_tilt_power_save_description">Pause tilt effect when battery saver is enabled</string>
  <string name="zoom_title">Zoom effect</string>
  <string name="zoom_description">Launcher &amp; lockscreen</string>
  <string name="zoom_category_launcher">Launcher zoom</string>
  <string name="zoom_category_unlock">Lockscreen zoom</string>
  <string name="zoom_intensity">Intensity</string>
  <string name="zoom_intensity_description">When increased, the camera zooms out more</string>
  <string name="zoom_power_save_description">Pause zoom effect when battery saver is enabled</string>
  <string name="zoom_launcher">Zoom out when opening quick settings or app drawer</string>
  <string name="zoom_launcher_description">Might be unavailable on some devices</string>
  <string name="zoom_damping">Animation damping</string>
  <string name="zoom_damping_description">Activate and decrease for smoother zooming</string>
  <string name="zoom_system">Use system-provided zoom effect</string>
  <string name="zoom_system_description">Might fix jerky zoom animation when tilt effect is turned on, available only on some devices</string>
  <string name="zoom_unlock">Zoom out on lockscreen</string>
  <string name="zoom_unlock_description">Might be jerky if tilt effect is turned on</string>
  <string name="zoom_duration">Unlock zoom duration</string>
  <string name="zoom_duration_description">Decrease for faster animation</string>
  <string name="other_title">Other options</string>
  <string name="other_description">Rendering, language &amp; reset</string>
  <string name="other_language">Language</string>
  <string name="other_language_description">Many thanks to all the volunteer translators at Transifex! Please visit the project\'s GitHub page to learn how you can help make Pallax Live Wallpapers available for your language.</string>
  <string name="other_language_system">System default: %1$s</string>
  <string name="other_language_not_available">Not available</string>
  <string name="other_gpu">Hardware acceleration</string>
  <string name="other_gpu_description">Turn off if the wallpaper crashes</string>
  <string name="other_gpu_info">Hardware acceleration is only available for Pallax starting with Android 8. The wallpaper animations might therefore be a bit jerky.</string>
  <string name="other_launcher">Hide icon in launcher</string>
  <string name="other_launcher_description">Settings will only be accessible in your system\'s live wallpaper picker</string>
  <string name="other_theme">App color theme</string>
  <string name="other_theme_description">Try another look</string>
  <string name="other_theme_auto">Auto</string>
  <string name="other_theme_light">Light</string>
  <string name="other_theme_dark">Dark</string>
  <string name="other_reset">Reset all settings</string>
  <string name="other_reset_description">Does more than uninstalling would do, because the preferences are stored at a special place as they have to be accessible directly after device startup</string>
  <string name="about_title">About</string>
  <string name="about_description">Developer info &amp; more</string>
  <string name="about_version">Version</string>
  <string name="about_changelog">Changelog</string>
  <string name="about_changelog_description">What\'s new?</string>
  <string name="about_developer">Developer</string>
  <string name="about_vending" translatable="false">Google Play</string>
  <string name="about_vending_description">More apps by the developer</string>
  <string name="about_github" translatable="false">GitHub</string>
  <string name="about_github_description">Source code</string>
  <string name="about_translation" translatable="false">Transifex</string>
  <string name="about_translation_description">Help translate Pallax</string>
  <string name="about_privacy">Privacy policy</string>
  <string name="about_privacy_description">How is your data processed?</string>
  <string name="msg_feedback">A great app requires a lot of time and lives from the feedback of its users.\n\nDo you have any wishes, comments or questions? Contact me!\nOtherwise I would be very happy about a nice review in the Play Store.</string>
  <string name="msg_share">Check out this cool live wallpaper app: \nhttps://play.google.com/store/apps/details?id=com.patrickzedler.pallax</string>
  <string name="msg_hide">Hide icon in launcher?</string>
  <string name="msg_reset">Reset all settings?</string>
  <string name="msg_force_stop">Forced stop required to apply changes</string>
  <string name="msg_apply_colors">Changed colors will be applied to the system the next time you turn off the screen</string>
  <string name="msg_apply_changes">To apply (eventually) changed options a restart of the running wallpaper service is recommended. This cannot be done automatically.\nPlease force-stop Pallax in your system settings and then apply Pallax as your wallpaper again.</string>
  <string name="msg_replace_or_keep">Do you want the stored wallpaper in %1$s mode to be kept or should it be replaced by your current static wallpaper?</string>
</resources>