<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Pallax Android.
  ~
  ~ Pallax Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Pallax Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Pallax Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2022 by Patrick Zedler
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_zoom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar_zoom"
      style="@style/Widget.Pallax.Toolbar.Back"
      app:title="@string/zoom_title"
      app:menu="@menu/menu_main" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/scroll_zoom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraint_zoom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/max_content_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
          style="@style/Widget.Pallax.LinearLayout.ListItem.TwoLine"
          android:paddingBottom="0dp">

          <ImageView
            android:id="@+id/image_zoom_intensity"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_zoom_out"
            tools:ignore="ContentDescription" />

          <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/zoom_intensity" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_intensity_description" />

          </LinearLayout>

        </LinearLayout>

        <com.google.android.material.slider.Slider
          android:id="@+id/slider_zoom_intensity"
          style="@style/Widget.Pallax.Slider"
          android:valueFrom="1"
          android:valueTo="5"
          android:stepSize="1" />

        <LinearLayout
          android:id="@+id/linear_zoom_power_save"
          style="@style/Widget.Pallax.LinearLayout.ListItem.TwoLine.Clickable">

          <ImageView
            android:id="@+id/image_zoom_power_save"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_battery_saver_anim"
            tools:ignore="ContentDescription" />

          <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox.Stretch">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/parallax_swipe_power_save" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_power_save_description" />

          </LinearLayout>

          <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_zoom_power_save"
            style="@style/Widget.Pallax.Switch" />

        </LinearLayout>

        <TextView
          style="@style/Widget.Pallax.TextView.Category"
          android:text="@string/zoom_category_launcher" />

        <LinearLayout
          android:id="@+id/linear_zoom_launcher"
          style="@style/Widget.Pallax.LinearLayout.ListItem.SingleLine.Clickable">

          <ImageView
            android:id="@+id/image_zoom_launcher"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_aod"
            tools:ignore="ContentDescription" />

          <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox.Stretch">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/zoom_launcher" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_launcher_description" />

          </LinearLayout>

          <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_zoom_launcher"
            style="@style/Widget.Pallax.Switch" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/linear_zoom_damping"
          style="@style/Widget.Pallax.LinearLayout.ListItem.TwoLine.Clickable"
          android:orientation="vertical"
          android:paddingStart="16dp"
          android:paddingEnd="14dp"
          android:paddingBottom="0dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="2dp"
            android:gravity="center_vertical">

            <ImageView
              android:id="@+id/image_zoom_damping"
              style="@style/Widget.Pallax.ImageView.ListItem.Icon"
              android:src="@drawable/ic_round_animation_anim"
              tools:ignore="ContentDescription" />

            <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox.Stretch">

              <TextView
                style="@style/Widget.Pallax.TextView.ListItem.Title"
                android:text="@string/zoom_damping" />

              <TextView
                style="@style/Widget.Pallax.TextView.ListItem.Description"
                android:text="@string/zoom_damping_description" />

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
              android:id="@+id/switch_zoom_damping"
              style="@style/Widget.Pallax.Switch" />

          </LinearLayout>

          <com.google.android.material.slider.Slider
            android:id="@+id/slider_zoom_damping"
            style="@style/Widget.Pallax.Slider"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="0dp"
            android:valueFrom="5"
            android:valueTo="25"
            android:stepSize="1" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/linear_zoom_system"
          style="@style/Widget.Pallax.LinearLayout.ListItem.SingleLine.Clickable">

          <ImageView
            android:id="@+id/image_zoom_system"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_settings_suggest"
            tools:ignore="ContentDescription" />

          <LinearLayout
            style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox.Stretch">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/zoom_system" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_system_description" />

          </LinearLayout>

          <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_zoom_system"
            style="@style/Widget.Pallax.Switch" />

        </LinearLayout>

        <TextView
          style="@style/Widget.Pallax.TextView.Category"
          android:text="@string/zoom_category_unlock" />

        <LinearLayout
          android:id="@+id/linear_zoom_unlock"
          style="@style/Widget.Pallax.LinearLayout.ListItem.SingleLine.Clickable">

          <ImageView
            android:id="@+id/image_zoom_unlock"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_screen_lock_portrait"
            tools:ignore="ContentDescription" />

          <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox.Stretch">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/zoom_unlock" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_unlock_description" />

          </LinearLayout>

          <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_zoom_unlock"
            style="@style/Widget.Pallax.Switch" />

        </LinearLayout>

        <LinearLayout
          style="@style/Widget.Pallax.LinearLayout.ListItem.TwoLine"
          android:paddingBottom="0dp">

          <ImageView
            android:id="@+id/image_zoom_duration"
            style="@style/Widget.Pallax.ImageView.ListItem.Icon"
            android:src="@drawable/ic_round_timer_anim"
            tools:ignore="ContentDescription" />

          <LinearLayout style="@style/Widget.Pallax.LinearLayout.ListItem.TextBox">

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Title"
              android:text="@string/zoom_duration" />

            <TextView
              style="@style/Widget.Pallax.TextView.ListItem.Description"
              android:text="@string/zoom_duration_description" />

          </LinearLayout>

        </LinearLayout>

        <com.google.android.material.slider.Slider
          android:id="@+id/slider_zoom_duration"
          style="@style/Widget.Pallax.Slider"
          android:valueFrom="500"
          android:valueTo="1500"
          android:stepSize="100" />

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>