<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Pallax Android.
  ~
  ~ Pallax Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Pallax Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Pallax Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2022 by Patrick Zedler
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <com.google.android.material.appbar.MaterialToolbar
    style="@style/Widget.Pallax.Toolbar.Centered"
    app:title="Replace stored wallpaper?" />

  <com.google.android.material.divider.MaterialDivider
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
      android:id="@+id/linear_overwrite_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/text_overwrite_question"
        style="@style/Widget.Pallax.TextView.Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/msg_replace_or_keep"/>

      <LinearLayout
        android:id="@+id/linear_overwrite_container_previews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <com.google.android.material.card.MaterialCardView
          android:id="@+id/card_overwrite_current"
          android:layout_width="60dp"
          android:layout_height="60dp"
          app:cardCornerRadius="16dp"
          app:strokeWidth="1dp"
          app:strokeColor="?attr/colorOutline">

          <com.patrickzedler.pallax.view.WallpaperView
            android:id="@+id/wallpaper_overwrite_current"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
          android:id="@+id/linear_overwrite_connection"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center_vertical">

          <TextView
            style="@style/Widget.Pallax.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOutline"
            android:text="replace with"/>

          <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
          android:id="@+id/card_overwrite_new"
          android:layout_width="60dp"
          android:layout_height="60dp"
          app:cardCornerRadius="16dp"
          app:strokeWidth="1dp"
          app:strokeColor="?attr/colorOutline">

          <com.patrickzedler.pallax.view.WallpaperView
            android:id="@+id/wallpaper_overwrite_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </com.google.android.material.card.MaterialCardView>

      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/button_overwrite_keep"
          style="@style/Widget.Pallax.Button.UnelevatedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:text="@string/action_keep" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/button_overwrite_replace"
          style="@style/Widget.Pallax.Button.UnelevatedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/action_replace" />

      </LinearLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/button_overwrite_replace_all"
        style="@style/Widget.Pallax.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/action_replace_all" />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>